--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,15 @@
-apply plugin: "com.android.application"
+apply plugin: "com.android.library"
 
 dependencies {
-    compile project(':BaseGameUtils')
+    //compile project(':BaseGameUtils')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:23.0.1'
+    compile 'com.android.support:design:23.0.1'
+
+    compile 'com.google.android.gms:play-services-auth:11.0.1'
+    compile "com.google.android.gms:play-services-games:11.0.1"
+    compile "com.google.android.gms:play-services-plus:11.0.1"
 }
 
 android {
@@ -21,7 +26,6 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
     defaultConfig {
-        applicationId "com.zapic.android.demo"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
@@ -35,6 +39,9 @@ android {
         }
         debug {
             signingConfig signingConfigs.config
+        }
+        dexOptions {
+            preDexLibraries false
         }
     }
 }
