--- a/zapic/src/main/AndroidManifest.xml
+++ b/zapic/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths" />
+                android:resource="@xml/zapic_provider_paths" />
         </provider>
     </application>
 </manifest>
