--- a/zapic-demo/build.gradle
+++ b/zapic-demo/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':zapic')
     implementation 'com.android.support:support-annotations:27.1.0'
+    implementation 'com.squareup:seismic:1.0.2'
 }
