--- a/zapic-demo/build.gradle
+++ b/zapic-demo/build.gradle
@@ -1,4 +1,15 @@
+buildscript {
+    repositories {
+        maven { url 'https://plugins.gradle.org/m2/'}
+    }
+
+    dependencies {
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:0.8.1'
+    }
+}
+
 apply plugin: 'com.android.application'
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -10,6 +21,11 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName '1.0.0'
+
+        manifestPlaceholders = [
+            onesignal_app_id: '0f02dd00-454d-4c41-9a98-4b817df9efce',
+            onesignal_google_project_number: '853726039702'
+        ]
     }
 
     buildTypes {
@@ -28,6 +44,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':zapic')
-    implementation 'com.android.support:support-annotations:27.1.0'
+    implementation 'com.android.support:support-annotations:27.1.1'
+    implementation 'com.onesignal:OneSignal:3.+'
     implementation 'com.squareup:seismic:1.0.2'
+    implementation 'io.branch.sdk.android:library:2.+'
 }
