--- a/zapic-demo/build.gradle
+++ b/zapic-demo/build.gradle
@@ -4,12 +4,12 @@ buildscript {
     }
 
     dependencies {
-        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:0.8.1'
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.10.1, 0.99.99]'
     }
 }
 
-apply plugin: 'com.android.application'
 apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -24,7 +24,7 @@ android {
 
         manifestPlaceholders = [
             onesignal_app_id: '0f02dd00-454d-4c41-9a98-4b817df9efce',
-            onesignal_google_project_number: '853726039702'
+            onesignal_google_project_number: 'REMOTE'
         ]
     }
 
@@ -44,8 +44,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':zapic')
-    implementation 'com.android.support:support-annotations:27.1.1'
-    implementation 'com.onesignal:OneSignal:3.+'
+    implementation "com.android.support:support-annotations:$rootProject.ext.googleSupportVersion"
+    implementation "com.android.support:support-fragment:$rootProject.ext.googleSupportVersion"
+    // implementation "com.android.support:appcompat-v7:$rootProject.ext.googleSupportVersion"
+    // implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
     implementation 'com.squareup:seismic:1.0.2'
-    implementation 'io.branch.sdk.android:library:2.+'
+    // implementation 'io.branch.sdk.android:library:2.+'
 }
