--- a/zapic/build.gradle
+++ b/zapic/build.gradle
@@ -10,13 +10,6 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
 
-    defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName '1.0.0'
-    }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -28,14 +21,28 @@ android {
         sourceCompatibility rootProject.ext.sourceCompatibility
         targetCompatibility rootProject.ext.targetCompatibility
     }
+
+    defaultConfig {
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode 1
+        versionName '1.0.0'
+
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation "com.google.android.gms:play-services-auth:${rootProject.ext.playServicesVersion}"
-    implementation "com.google.android.gms:play-services-games:${rootProject.ext.playServicesVersion}"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "com.android.support:support-annotations:$rootProject.ext.googleSupportVersion"
+    implementation "com.android.support:support-compat:$rootProject.ext.googleSupportVersion"
+    compileOnly "com.android.support:support-v4:$rootProject.ext.googleSupportVersion"
+    compileOnly "com.google.android.gms:play-services-auth:$rootProject.ext.googlePlayServicesVersion"
+    compileOnly "com.google.android.gms:play-services-games:$rootProject.ext.googlePlayServicesVersion"
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
 apply from: './release.gradle'
