--- a/zapic-demo/build.gradle
+++ b/zapic-demo/build.gradle
@@ -46,8 +46,7 @@ dependencies {
     implementation project(':zapic')
     implementation "com.android.support:support-annotations:$rootProject.ext.googleSupportVersion"
     implementation "com.android.support:support-fragment:$rootProject.ext.googleSupportVersion"
-    // implementation "com.android.support:appcompat-v7:$rootProject.ext.googleSupportVersion"
-    // implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
+    implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
     implementation 'com.squareup:seismic:1.0.2'
-    // implementation 'io.branch.sdk.android:library:2.+'
+    implementation 'io.branch.sdk.android:library:2.+'
 }
