--- a/zapic/build.gradle
+++ b/zapic/build.gradle
@@ -35,7 +35,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:support-annotations:$rootProject.ext.googleSupportVersion"
-    implementation "com.android.support:support-compat:$rootProject.ext.googleSupportVersion"
+    implementation "com.android.support:support-core-utils:$rootProject.ext.googleSupportVersion"
     compileOnly "com.android.support:support-v4:$rootProject.ext.googleSupportVersion"
     compileOnly "com.google.android.gms:play-services-auth:$rootProject.ext.googlePlayServicesVersion"
     compileOnly "com.google.android.gms:play-services-games:$rootProject.ext.googlePlayServicesVersion"
