--- a/build.gradle
+++ b/build.gradle
@@ -10,20 +10,18 @@ ext {
     // in 2018. Until then, we're simply sticking with Java 7.
     sourceCompatibility = JavaVersion.VERSION_1_7
     targetCompatibility = JavaVersion.VERSION_1_7
-
-    googlePlayServicesVersion = '15.0.1'
-    googleSupportVersion = '27.1.1'
 }
 
 buildscript {
     repositories {
         google()
         jcenter()
-        mavenCentral()
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.google.android.gms:strict-version-matcher-plugin:1.0.2'
+        classpath 'digital.wup:android-maven-publish:3.6.1'
     }
 }
 
@@ -31,7 +29,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        mavenCentral()
     }
 }
 
