--- a/zapic-demo/build.gradle
+++ b/zapic-demo/build.gradle
@@ -1,19 +1,23 @@
-buildscript {
-    repositories {
-        maven { url 'https://plugins.gradle.org/m2/'}
-    }
-
-    dependencies {
-        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.10.1, 0.99.99]'
-    }
+plugins {
+    id 'com.onesignal.androidsdk.onesignal-gradle-plugin' version '0.11.0'
+    id 'com.android.application'
 }
-
-apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
-apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
+
+    buildTypes {
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    compileOptions {
+        sourceCompatibility rootProject.ext.sourceCompatibility
+        targetCompatibility rootProject.ext.targetCompatibility
+    }
 
     defaultConfig {
         applicationId 'com.zapic.androiddemo'
@@ -27,26 +31,20 @@ android {
             onesignal_google_project_number: 'REMOTE'
         ]
     }
-
-    buildTypes {
-        release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    compileOptions {
-        sourceCompatibility rootProject.ext.sourceCompatibility
-        targetCompatibility rootProject.ext.targetCompatibility
-    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(':zapic')
-    implementation "com.android.support:support-annotations:$rootProject.ext.googleSupportVersion"
-    implementation "com.android.support:support-fragment:$rootProject.ext.googleSupportVersion"
-    implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.zapic.sdk.android:zapic-sdk-android:1.2.0'
+    implementation 'com.android.support:support-annotations:27.1.1'
+    implementation 'com.android.support:support-fragment:27.1.1'
+    implementation 'com.onesignal:OneSignal:3.9.1'
     implementation 'com.squareup:seismic:1.0.2'
-    implementation 'io.branch.sdk.android:library:2.+'
+    implementation 'io.branch.sdk.android:library:2.18.1'
+
+    // Note: Replace the above "zapic-sdk-android" dependency from JCenter with the following local
+    // dependency for debugging and testing.
+    //implementation project(':zapic')
 }
+
+apply plugin: 'com.google.android.gms.strict-version-matcher-plugin'
