--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,4 @@
+// https://docs.gradle.org/4.8.1/userguide/publishing_maven.html#publishing_maven:deferred_configuration
+enableFeaturePreview('STABLE_PUBLISHING')
+
 include ':zapic', ':zapic-demo'
